--- a/landing-page.html
+++ b/landing-page.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="info-card">
                     <div>
-                        <img class="info-img" alt="img3" src="/images/img3.jpg">
+                        <img class="info-img" alt="img3" src="/images/img3.png">
                         <div class="description">
                             this is some subtext under an
                             illustration or image
@@ -96,12 +96,38 @@
         </div>
     </div>
 
-    <div class="quote-div">
-
+    <!-- QUOTE SECTION-->
+    <div class="quote-section">
+        <div class="quote-block">
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually
+                read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="quote-author">
+                -Thor, God of Thunder
+            </div>
+        </div>
     </div>
 
-    <div class="advertisement">
-        
+    <!--ADVERTISEMENT SECTION-->
+    <div class="advertisement-section">
+        <div class="advertisement-block">
+            <div class="left-section">
+                <div class="advertisement-heading">
+                    Call to action! It's time!
+                </div>
+                <div class="signup-message">
+                    Sign up for our product by clicking that button
+                    right over there!
+                </div>
+            </div>
+            <div class="right-section">
+                <div class="advertisement-signup">
+                    <button class="advertisement-signup-button">Sign up</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
