Translated most of the website into Japanese. Still need to figure out header links

--- a/landing-page.html
+++ b/landing-page.html
@@ -18,13 +18,13 @@
             </div>
             <div class="links">
                 <div class="header-links">
-                    header link one
+                    <a href="https://www.google.com">header link one</a>
                 </div>
                 <div class="header-links">
-                    header link two
+                    <a href="https://www.google.com">header link two</a>
                 </div>
                 <div class="header-links">
-                    header link three
+                    <a href="https://www.google.com">header link three</a>
                 </div>
             </div>  
         </div>
@@ -32,14 +32,14 @@
         <div class="intro-contents">
             <div class="heading-left-block">
                 <div class="heading">
-                    This website is awesome
+                    今から日本語を勉強しよう！
                 </div>
                 <div class="heading-description">
-                    This website has some subtext that goes here under the main title. 
-                    It's a smaller font and the color is lower contrast
+                    このウェブサイトから無料で日本語を勉強できる。これらのレッスンは全部一人で書いたものです。
+                    最後まですべてが勉強になりますように！
                 </div>
                 <div>
-                    <button class="sign-up">Sign up</button>
+                    <button class="sign-up">登録</button>
                 </div>
             </div>
             <div class="heading-right-block">
@@ -53,15 +53,14 @@
     <div class="info">
         <div class="info-block">
             <div class="info-heading">
-                Some random information.
+                なんで日本語を勉強する？
             </div>
             <div class="info-row">
                 <div class="info-card">
                     <div>
                         <img class="info-img" alt="img1" src="/images/img1.jpg">
                         <div class="description">
-                            this is some subtext under an
-                            illustration or image
+                            華やかな場所が日本に多い
                         </div>
                     </div>
                 </div>
@@ -69,8 +68,7 @@
                     <div>
                         <img class="info-img" alt="img2" src="/images/img2.webp">
                         <div class="description">
-                            this is some subtext under an
-                            illustration or image
+                            日本文化が面白いです
                         </div>
                     </div>
                 </div>
@@ -78,8 +76,7 @@
                     <div>
                         <img class="info-img" alt="img3" src="/images/img3.png">
                         <div class="description">
-                            this is some subtext under an
-                            illustration or image
+                            日本のメディアが特有です
                         </div>
                     </div>
                 </div>
@@ -87,8 +84,7 @@
                     <div>
                         <img class="info-img" alt="img4" src="images/img4.gif">
                         <div class="description">
-                            this is some subtext under an
-                            illustration or image
+                            日本に旅行するためです
                         </div>
                     </div>
                 </div>
@@ -100,12 +96,11 @@
     <div class="quote-section">
         <div class="quote-block">
             <div class="quote">
-                This is an inspiring quote, or a testimonial from a customer.
-                Maybe it's just filling up space, or maybe people will actually
-                read it. Who knows? All I know is that it looks nice.
+                人生は儚い瞬間の連続。大切なのは、
+                その一瞬一瞬を大切に生きることだ。
             </div>
             <div class="quote-author">
-                -Thor, God of Thunder
+                -住野よる
             </div>
         </div>
     </div>
@@ -115,24 +110,24 @@
         <div class="advertisement-block">
             <div class="left-section">
                 <div class="advertisement-heading">
-                    Call to action! It's time!
+                    時間は今だ！
                 </div>
                 <div class="signup-message">
-                    Sign up for our product by clicking that button
-                    right over there!
+                    登録すると新しい文法と単語を勉強し始めるよ！
                 </div>
             </div>
             <div class="right-section">
                 <div class="advertisement-signup">
-                    <button class="advertisement-signup-button">Sign up</button>
+                    <button class="advertisement-signup-button">登録</button>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="footer">
-        
+        <div class="footer-message">
+            Website by Tommy Tran. None of the images on this page belong to me
+        </div>
     </div>
-
 </body>
 </html>
