Fixed image not uploading on deployment issues

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="info-row">
                 <div class="info-card">
                     <div>
-                        <img class="info-img" alt="img1" src="/images/img1.jpg">
+                        <img class="info-img" alt="img1" src="images/img1.jpg">
                         <div class="description">
                             華やかな場所が日本に多い
                         </div>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="info-card">
                     <div>
-                        <img class="info-img" alt="img2" src="/images/img2.webp">
+                        <img class="info-img" alt="img2" src="images/img2.webp">
                         <div class="description">
                             日本文化が面白いです
                         </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="info-card">
                     <div>
-                        <img class="info-img" alt="img3" src="/images/img3.png">
+                        <img class="info-img" alt="img3" src="images/img3.png">
                         <div class="description">
                             日本のメディアが特有です
                         </div>
